--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=0.5,user-scalable=no"">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="http://at.alicdn.com/t/font_1356332_42vclzd44qh.css">
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_1356332_o5s2buwzn0r.css">
     <title>vue_netease</title>
   </head>
   <style>
